--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  package_info: ^2.0.2
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  intl: ^0.17.0
+  package_info: ^2.0.2
+  path_provider: ^2.0.2
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
